k8s/istio/flagger/exercise/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-demo-7
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-go-demo-7
      protocol: HTTP
    hosts:
    - go-demo-7.cluster.prageethw.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-go-demo-7
      protocol: HTTP #need to set this as http to enable elb ssl offloading.   
    hosts:
    - go-demo-7.cluster.prageethw.com
